--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prisma": "^5.17.0"
   },
   "dependencies": {
+    "@prisma/client": "^5.17.0",
     "express": "^4.19.2",
     "socket.io": "^4.7.5"
   }
