feature: adds user create, read and list

--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "nodemon": "^3.1.4",
     "prisma": "^5.17.0"
   },
   "dependencies": {
     "@prisma/client": "^5.17.0",
+    "body-parser": "^1.20.2",
     "express": "^4.19.2",
+    "jsonschema": "^1.4.1",
     "socket.io": "^4.7.5"
   },
   "type": "module"
