--- a/package.json
+++ b/package.json
@@ -10,15 +10,21 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^22.0.0",
     "nodemon": "^3.1.4",
-    "prisma": "^5.17.0"
+    "prisma": "^5.17.0",
+    "tsx": "^4.16.2",
+    "typescript": "^5.5.4"
   },
   "dependencies": {
     "@prisma/client": "^5.17.0",
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
     "jsonschema": "^1.4.1",
-    "socket.io": "^4.7.5"
+    "socket.io": "^4.7.5",
+    "superstruct": "^2.0.2",
+    "ts-node": "^10.9.2"
   },
   "type": "module"
 }
